fixed modal middle alignment

--- a/css/our_team.css
+++ b/css/our_team.css
@@ -12,9 +12,13 @@ body {
 
 /*modal*/
 
+#person-description {
+  margin-top: 20px;
+}
 .modal {
   text-align: center;
   margin-top: 15%;
+
 }
 
 /* ---- button ---- */
